# sumsmaster

./: .bitrab-ci.yml  .pydoctest.json  .pylintrc  .pylintrc_tests  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  spec.md  tox.ini
.bitrab-ci-scripts/: bandit.sh  check_docs.sh  lint.sh  mypy.sh  pytest.sh
.github/: dependabot.yml
.github/workflows/: build.yml  create_draft_release.yml  deploy-lite.yml  publish_to_pypi.yml  release.yml  tox.yml
docs/: installation.md  renard_cheatsheet.txt  renard_log_table.html
docs/extending/: CONTRIBUTING.md
docs/overview/: README.md
docs/usage/: quickstart.md
scripts/: basic_checks.sh  poc_log_table.py
spec/: better_logs.md  deferred.md  estimation_tricks.md  tkinter.md
sumsmaster/: __about__.py  __init__.py  __main__.py  cli.py  coverage.py
sumsmaster/gui/: __init__.py  app.py  plans.py  practice.py  store.py
sumsmaster/tricks/: __init__.py  model.py  registry.py
sumsmaster_lite/: README.md  angular.json  package-lock.json  package.json
sumsmaster_lite/src/: index.html  styles.scss
sumsmaster_lite/src/app/: app.html  app.scss  app.spec.ts  app.ts
sumsmaster_lite/src/app/core/: coverage.ts  models.ts  plans.ts  practice.spec.ts  practice.ts  storage.service.ts  tricks.ts
tests/: test_cli.py  test_coverage.py  test_gui_app.py  test_gui_plans.py  test_gui_practice.py  test_gui_store.py  test_tricks.py
